[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qimeng"
version = "0.1.0"
description = "An interactive narrative engine for Qimeng"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["openai>=1.0"]

[project.scripts]
qimeng = "qimeng.chat:run"
